Made the upper sidebar work. Hurray!
- The Controls folder is now part of the solution structure, which will store the UserControls.
- ServerPropertiesControl has been created. This is the upper row of the sidebar, which handles the server.properties file.
- JavaArgumentsControl has been created. This is the bottom row of the sidebar, which handles the user_jvm_args.txt file.
- MainWindow.xaml now has a local connection to ServerPropertiesControl.
- spServerPropertiesPanel has replaced the placeholder sidebar. It is a stackpanel, and has visibility set to collapsed by default.
- Added the first comboboxes and items to ServerPropertiesControl, including its (as of yet useless) primary function that all comboboxes will share, ServerPropertyChanged.
- Added a small test function to txtModpackFolderPath_TextChanged to make the server properties sidebar visible when there's an existing Forge installation.

--- a/MinecraftServerTool/MinecraftServerTool.csproj
+++ b/MinecraftServerTool/MinecraftServerTool.csproj
@@ -61,6 +61,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="Controls\JavaArgumentsControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\ServerPropertiesControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -68,6 +76,12 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Controls\JavaArgumentsControl.xaml.cs">
+      <DependentUpon>JavaArgumentsControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\ServerPropertiesControl.xaml.cs">
+      <DependentUpon>ServerPropertiesControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
