Made the tooltips button reusable and centralized.
- Added the "Resources" folder. This is where structural classes will go in.
- Added the "Tooltips.cs" class, where all the tooltips' texts will be stored in.
- Added the "TooltipButton.xaml" UserControl. The basis for all tooltips from now on.
- Populated Tooltips.cs with some initial entries.
- Added a test tooltip button to the server.properties sidebar.

--- a/MinecraftServerTool/MinecraftServerTool.csproj
+++ b/MinecraftServerTool/MinecraftServerTool.csproj
@@ -61,11 +61,16 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Resources\Tooltips.cs" />
     <Page Include="Controls\JavaArgumentsControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Controls\ServerPropertiesControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\TooltipButton.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -82,6 +87,9 @@
     </Compile>
     <Compile Include="Controls\ServerPropertiesControl.xaml.cs">
       <DependentUpon>ServerPropertiesControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\TooltipButton.xaml.cs">
+      <DependentUpon>TooltipButton.xaml</DependentUpon>
     </Compile>
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -114,6 +122,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Controls\Sidebars\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
