Refactor the server.properties sidebar to be MVVM-compliant.
- Added ViewModels folder and ServerPropertiesViewModel.cs
- Hooked ServerPropertiesViewModel to ServerPropertiesControl
- Replaced direct the form's field handling with data bindings in XAML

Reasoning: There's just too many comboboxes, textboxes, and variables involved in server.properties. Even with just the most primordial settings in the sidebar, it's still a lot of forms to handle -- Manually adding those entries into the XAML would make the code look like a complete mess. This isn't even taking into consideration the future "Advanced Server Properties" window that will handle ALL server.properties fields (well over 50). Separating the insane amount of variables required for this should make for cleaner XAML and more scaleable code-behind.

--- a/MinecraftServerTool/MinecraftServerTool.csproj
+++ b/MinecraftServerTool/MinecraftServerTool.csproj
@@ -62,6 +62,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Resources\Tooltips.cs" />
+    <Compile Include="ViewModels\ServerPropertiesViewModel.cs" />
     <Page Include="Controls\JavaArgumentsControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
