--- a/MinecraftServerTool/MinecraftServerTool.csproj
+++ b/MinecraftServerTool/MinecraftServerTool.csproj
@@ -61,6 +61,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Helpers\Converters.cs" />
     <Compile Include="Resources\Tooltips.cs" />
     <Compile Include="ViewModels\ServerPropertiesViewModel.cs" />
     <Page Include="Controls\JavaArgumentsControl.xaml">
