--- a/MinecraftServerTool/MinecraftServerTool.csproj
+++ b/MinecraftServerTool/MinecraftServerTool.csproj
@@ -62,8 +62,10 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Helpers\Converters.cs" />
+    <Compile Include="Helpers\RelayCommand.cs" />
     <Compile Include="Resources\Tooltips.cs" />
     <Compile Include="Services\ServerPropertiesService.cs" />
+    <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="ViewModels\ServerPropertiesViewModel.cs" />
     <Page Include="Controls\Sidebars\JavaArgumentsControl.xaml">
       <SubType>Designer</SubType>
