--- a/MinecraftServerTool/MinecraftServerTool.csproj
+++ b/MinecraftServerTool/MinecraftServerTool.csproj
@@ -64,7 +64,9 @@
     <Compile Include="Helpers\Converters.cs" />
     <Compile Include="Helpers\RelayCommand.cs" />
     <Compile Include="Resources\Tooltips.cs" />
+    <Compile Include="Services\JavaArgumentsService.cs" />
     <Compile Include="Services\ServerPropertiesService.cs" />
+    <Compile Include="ViewModels\JavaArgumentsViewModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="ViewModels\ServerPropertiesViewModel.cs" />
     <Page Include="Controls\Sidebars\JavaArgumentsControl.xaml">
